--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
         <h4 class="bordagrossa" style="text-align: center"><b> Poucas palavras nunca iram definir o que somos ou oque temos </b></h4>
         <h4 class = "bordagrossa" style = "text-align: center" > Podemos nos distanciar mil vezes e voltaremos a nós falar e amar um milhão </h4>
-        h4 class="bordagrossa" style="text-align: center">A distância pode significar muita coisa para outros mais para o nosso amor sempre foi um detalhe</h4>
         <h4 class="bordagrossa" style="text-align: center"> Cada palavra sua, cada aúdio e vídeo/boomerang. Eu me sinto tocado, abraçado, beijado e amado com cada gesto vindo de você, um amor tão forte como esse não se pode ser ignorado ou calado </h4>
+        <h4 class="bordagrossa" style="text-align: center">A distância pode significar muita coisa para outros mais para o nosso amor sempre foi um detalhe</h4>
         <h4 class="bordagrossa" style="text-align: center"> THANK YOU FOR LOVING ME. Uma música com um enorme valor sentimental pra mim, define tudo o que eu desejo ser com você</h4>
         
         <h2 class="fundo">Ao meu amor dedico essas simples palavras escritas com meu coração </h2>
