--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p> Mesmo sem nunca ter lhe visto sei que lhe conhecer resultará em um colapso de sentimentos e vontades tão fortes e um alívio por finalmente estar ao lado de alguém que amo tanto e me faz sentir as coisas numa intensidade tão forte.</p>
         <p> Você me faz tão feliz mesmo não estando pessoalmente ao meu lado e não podendo me beijar, não retornei a sua vids para lhe confundir é sim para lhe amar como nunca amei antes.</p>
         <p> Não quero nunca lhe fazer mal, tanto que desejo você toda vida ao meu lado, amo você mais do que um dia achei que amaria alguém e isso é algo ótimo pois sei que existe amor de verdade porque eu conheço você.</p>
-        <p> Estou desde cedo pensando em palavras bonitas e como lhe dizer isso de mil maneiras diferentes porém nada substitui o mais sincero eu te amo dito do coração, palavras nem sempre foram meu forte sou de exatas amor, porém com você me sinto de humanas e posso até ser do que você precisar, Te amooooo </p>
-        <p> A distância pode significar muita coisa para outros mais para o nosso amor sempre foi um detalhe </p> 
+        <p> Estou desde cedo pensando em palavras bonitas e como lhe dizer isso de mil maneiras diferentes porém nada substitui o mais sincero eu te amo dito do coração, palavras nem sempre foram meu forte sou de exatas amor, porém com você me sinto de humanas e posso até ser do que você precisar, Te amooooo. </p>
+        <p> A distância pode significar muita coisa para outros mais para o nosso amor sempre foi um detalhe. </p>
 </body>
 </html>
