--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <p> Não quero nunca lhe fazer mal, tanto que desejo você toda vida ao meu lado, amo você mais do que um dia achei que amaria alguém e isso é algo ótimo pois sei que existe amor de verdade porque eu conheço você.</p>
         <p> Estou desde cedo pensando em palavras bonitas e como lhe dizer isso de mil maneiras diferentes porém nada substitui o mais sincero eu te amo dito do coração, palavras nem sempre foram meu forte sou de exatas amor, porém com você me sinto de humanas e posso até ser do que você precisar, Te amooooo. </p>
         <p> A distância pode significar muita coisa para outros mais para o nosso amor sempre foi um detalhe. </p>
+        <p> Sinto tanta falta das nossas ligações ia dos momentos mais carinhos do mundo aos mais quentes e prazerosos, nunca me arrependi de nada que vivi com você e faria tudo de novo. Lhe amo em todos os aspectos e lhe aceito como você é! Nunca mude por ninguém pois você é maravilhosa como é, o homem de sorte e aquele que tem seu coração.</p>
+        <p>Pois a felicidade e garantida, o carinho e amor não faltará, tenho tanta sorte de ter lhe conhecido e só tenho a lhe agradecer por ter permitido eu na sua vida, pois amo você é sempre amarei, nunca deixairei de pensar em você mesmo que faça anos sem nos falarmos, você faz parte de mim.</p>
+        <p> Meu maior amor, minha maior companhia, minha melhor amiga e minha maior paixão! Tenho tanto a lhe nomear que fico perdido, mais de uma coisa é certa você foi a presença mais forte na minha vida na qual eu desejo tudo de bom e queria que eu fosse o sortudo a estar sempre com você, sinto falta de você e de toda intensidade que nossas vidas são juntas.</p>
 </body>
 </html>
