--- a/index.html
+++ b/index.html
@@ -24,5 +24,45 @@
         <p> Sinto tanta falta das nossas ligações ia dos momentos mais carinhos do mundo aos mais quentes e prazerosos, nunca me arrependi de nada que vivi com você e faria tudo de novo. Lhe amo em todos os aspectos e lhe aceito como você é! Nunca mude por ninguém pois você é maravilhosa como é, o homem de sorte e aquele que tem seu coração.</p>
         <p>Pois a felicidade e garantida, o carinho e amor não faltará, tenho tanta sorte de ter lhe conhecido e só tenho a lhe agradecer por ter permitido eu na sua vida, pois amo você é sempre amarei, nunca deixairei de pensar em você mesmo que faça anos sem nos falarmos, você faz parte de mim.</p>
         <p> Meu maior amor, minha maior companhia, minha melhor amiga e minha maior paixão! Tenho tanto a lhe nomear que fico perdido, mais de uma coisa é certa você foi a presença mais forte na minha vida na qual eu desejo tudo de bom e queria que eu fosse o sortudo a estar sempre com você, sinto falta de você e de toda intensidade que nossas vidas são juntas.</p>
+        <p> O enredo da nossas vidas nunca terá um fim pois nossas vidas tem que se tornar um, duas vidas e um casal = amor sincero e verdadeiro.</p>
+        <p> Você pode acreditar em muitos amores e muitas paixões mais nada se pode comparar a verdadeira que nós sentimos e tão forte que mesmo em 5 anos sem nos conhecermos continua a aumentar e um querer o outro mais próximo chega a ser assustador como a intensidade que é.</p>
+        <p>Olha só vida, se isso não é amor pra toda vida parecer 5 anos meros meses e uma vida um ano não sei o que é, como tudo na vida que é bom faz o tempo voar e esse tempo parece nem ter existido pois voou ao seu lado.</p>
+        <p> Impossível não amar você pois ao seu lado descobri o quão grandioso pode ser o amor correspondido, quão maravilhoso e a atenção mesmo de longe e o que é estar realmente ansioso para algo, este algo está sendo algo magnífico que me fez chorar tanto. </p>
+
+<p> Choro de alegria contente por lhe conhecer, o contato mesmo de longe, foi algo que eu nunca acreditei me apegar ou amar alguém é acabou sendo totalmente o oposto nunca amei alguém igual lhe amo. </p>
+<p> A intensidade do nosso amor não dá para ser escrito nem descrito, o carinho e amor que nutrimos do outro nunca será quebrado, até aonde podemos chegar e algo que nem o destino ou futuro possa descrever. </p>
+<p> Uma tentativa ao seu lado não é somente uma chance, estará sendo o continue de uma história, o começo de um casal a poesia de um amor e a dissertação de uma união verdadeira. </p>
+<p> Como a vida e engraçada te coloca pessoas a sua frente com o amor da sua vida logo ali, mesmo tão perto estamos tão longe e por culpa nossa cansei de cometer tal erro banal e desejo estar com você espero não ser tarde demais porque eu realmente acredito em nós com um ótimo futuro. </p>
+<p> O porquê acredito nisso e tão simples, estamos a uma distância de 5 anos e mesmo assim nosso amor não diminui como e incrível isso. </p>
+<p> Se não acredita com isso pensa nas noites que passamos em ligações, nossas brincadeiras e a alegria enorme que um dar no outro, conversar com você preciso estar ciente que sairei com a bochecha doendo e o coração acelerado.</p>
+<p>A mais forte sensação de amor e carinho eu sinto de alguém que nunca esteve comigo,  chega ser engraçado como me sinto envolvido em tudo que você diz e como você faz a diferença na minha vida. </p>
+<p> Tudo que conversamos eu me dedico a melhorar nos meus erros e fazer você mais feliz na próxima vez nos meus acertos. </p>
+<p> Sua presença me agrada, ao ponto de eu pensar mil coisas pra você só pra ver seu sorriso e gratidão numa fração de segundos, um segundo pode ser pouca coisa a muitos mais para mim e mais do que suficiente se for com vc, me fará pensar por dias ou até semanas como aquilo foi único e desejo novamente. </p>
+<p> Isso tudo num gesto tão simples aí me faz pensar o que um abraço poderia resultar em meu coração um beijo na minha vida me sentiria o bozo fazendo um show infinito, e quem disse que eu não faria faria esse show todas as vezes possível? </p>
+<p> Haha com certeza eu faria e me dedicaria a melhorar cada vez mais porque eu amo você e nada irá abalar tal imensidão. </p>
+
+<p> Te conhecer porquê de repente eu estou tão decidido a isso, percebi quanto tempo perdemos e não quero entrar em um ciclo vicioso de entra e saí da sua vida,  quero ficar nela e ser parte dela, como o seu amor que você pode hoje e sempre. </p>
+
+<p>Já cansei de me flagrar pensando em como seria nosso encontro e sei que quando acontecer será algo que irá me surpreender, </p>
+<p> nos estamos a 5 anos nos surpreendendo sem nos conhecer imaginando a cada encontro a sensação do primeiro, a cada beijo como se fosse o primeiro e a intensidade de dois adolescentes a flor da pele. </p>
+<p>Hooo sensação magnífica que sinto pensando sobre nós estou no meio da aula sorrindo pro celular e ninguém além de você entenderia o que isso quer dizer realmente. </p>
+<p> Só nos entendemos a profundidade e largura do nosso amor e eu não sei somar seria isso que e preencher o buraco negro pois se for temos uma vida inteira a realizar. </p>
+
+<p>Como quero realizar isso ao seu lado tal buraco negro ser preenchido e transbordar de tanto amor e carinho só de sentimentos bons, isso sim e amor desafiar o que dizem impossível e eu digo somos capazes com nossos sentimentos pois não existe algo tão forte assim por simplesmente acontecer. </p>
+<p>Olha só a que pontos chegamos começamos na intensidade e estamos até hoje na mesma intensidade, você me ensina todos os dias o que e ser amado de verdade é como e torturante não estar com você. </p>
+<p>Tortura na qual quero por um fim, dando o continue da nossa história e o início da nossa dissertação. </p>
+
+<p>Aí aí bochecha doendo e a minha hoje, você me deixa alegre, me faz feliz e eu quero sempre dar meu melhor pra você porque você você isso é muitoooo mais. </p>
+<p>Você pode acabar se perguntando porque eu insisto tanto em nós dois e a resposta e simples, EU TE AMO. </p>
+
+<p>Você diria "ata" com uma resposta dessa então eu explicarei a longo prazo volte a ser minha mulher porque eu já sou seu homem, mas sei que isso e pedir demais no seu estado atual então permitida lhe conhecer. </p>
+<p>Lhe conhecendo sei que irá entender melhor cada palavra que eu falei e isso vai ser algo magnífico porque saberá que nosso amor não está para brincadeira e sim pra realidade, haaa realidade que eu tanto desejo e amaria. </p>
+<p>Estou me flagrando com os olhos cheio dágua e isso não me perturba nem um pouco porque é por um motivo feliz a cada palavra,frase e textinho pra você meu coração bate mais forte então nesse aqui e teste se consigo viver tão intensamente e olha só, sou capaz.</p>
+<p>A intensidade que tanto desejo, passeiiii no teste sou capaz de viver com você, precisava saber né, você é o amor da minha vida afinal de contas, e eu desejo que entenda que o seu sentimento por mim só está adormecido e não mudado.</p>
+<p>Olha olha o que temos não consigo descrever nem em 4000 letras e basicamente impossível pra mim definir nós dois e isso é ótimo porque sei que não a limites. </p>
+<p>Aquilo que se escreve e sabe aonde termina você sabe o limite, mais aquilo que se escreve e não sabe quando parar e excepcional porque sempre terá algo novo e disso vem a intensidade novamente e em 5 anos faço isso conosco e nosso amor só tem de aumentar. </p>
+<p>Não consigo me imaginar amanhã em qualquer lugar não sendo você do meu lado, fico perdido ao pensar nisso e me pego pensando em milhões de coisas que poderíamos fazer juntos. </p>
+<p>E eu desejo fazer cada coisa com você se não tivermos tanto tempo só quero mais alguns minutinhos para me perder no seu sorriso que o importante não é o lugar é sim você. </p>
+<p> Será que é amor? LÓGICO, TE AMO MEU ETERNO AMOR.  </p>
 </body>
 </html>
